4.6.1
-----
1. Update some translations.

4.6.0
-----
 1. Add option to auto-switch to reduced now-playing view, to help with OLED
    screen burn-in.
 2. For LMS running on piCorePlayer add 'Configuration' item to top-right menu
    of 'Server settings'
 3. If width >= 1000px then allow image in now-playing landscape to take 60% of
    width.
 4. Always blur background of detailed sub-toolbar.
 5. Manually reduce size of Vuetify CSS file.
 6. Multi-cover display for works in subtoolbar.
 7. Move pin/un-pin queue button into its menu.
 8. Show queue button in desktop now-playing bar if 1 or more tracks in queue.
 9. Base max grid cover size on window width.
10. If an artist has multiple release types then show an 'All releases' action
    in '...' menu.
11. Add 'hover' to grid items.
12. Use '-1' as default library id.
13. Show skip-overlay upon 'mouseup' not 'click' event.
14. For consistency, only start volume change on swipe when landscape if
    started on cover image (as per portrait view).
15. Fix plugin info retrieval for LMS >= 9.0 - thanks to Michael Herger.
16. Ensure no images for 'search' or 'entry' items.
17. For LMS >= 9.0 add 'Works' to 'Random Mix'.
18. Map some SqueezeSonic icons.
19. Don't append library name to toolbar subtitles, as is not always relevant.
20. Fix 'Play next' hover showing when in party mode.
21. Fix detailed sub-toolbar not showing in party mode.
22. Set vuetify 'accent' and 'primary' colours so that time picker uses chosen
    colour.
23. Fix dark patch bottom-right of now-playing only view with light themes.
24. When opening browse from now-playing/MAI try to go back to view
    afterwards.
25. Fix similar artists not showing in browse view.
26. Add 'All songs' to release-type headers (if more than 1 entry).
27. Add icon for plugin management page.

4.5.2
-----
1. Update translations.
2. Fix jumplist not showing for albums and works lists.
3. Only show works if main 'Works' category is enabled, not any additional