@@ -42,9 +42,9 @@ const LMS_IMAGE_SZ = IS_HIGH_DPI ? 600 : 300;
 const LMS_CURRENT_IMAGE_SZ = IS_HIGH_DPI ? 2048 : 1024;
 const LMS_IMAGE_SIZE = "_"+LMS_IMAGE_SZ+"x"+LMS_IMAGE_SZ+"_f";
 const LMS_CURRENT_IMAGE_SIZE = "_"+LMS_CURRENT_IMAGE_SZ+"x"+LMS_CURRENT_IMAGE_SZ+"_f";
-const LMS_DEFAULT_LIBRARY_PREV = "0"; // PRior to 4.5.3 this was used as default library id.
-const LMS_DEFAULT_LIBRARY = "-1";
-const LMS_DEFAULT_LIBRARIES = new Set([LMS_DEFAULT_LIBRARY, LMS_DEFAULT_LIBRARY_PREV]);
+const LMS_DEFAULT_LIBRARY = "0";
+const LMS_DEFAULT_PC_LIBRARY = "-1"; // Library ID to use for 'playlistcontrol' commands (see #882)
+const LMS_DEFAULT_LIBRARIES = new Set([LMS_DEFAULT_LIBRARY, LMS_DEFAULT_PC_LIBRARY]);
 const LMS_MATERIAL_UI_DEFAULT_PREF = "plugin.material-skin:defaults";
 const LMS_MATERIAL_DEFAULT_ITEMS_PREF = "plugin.material-skin:items";
 const LMS_MATERIAL_DEFAULT_PINNED_PREF = "plugin.material-skin:pinned";
